# Shepherd

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Makefile  README.md  ROADMAP.md  config.example.toml  docker-compose.yml  ruff.toml
agents/: domain.md  triage-labels.md
db/: Dockerfile  alembic.ini  bootstrap.sql  create_schema.py  entrypoint.sh  logic.py  models.py  postgres.Dockerfile  provisioning.py  pyproject.toml  roles.sql  seed.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial_schema.py  0002_extend_maintenance_type_enum.py  0003_kpi_daily_rollup.py  0004_driver_license_valid_to.py  0005_attendance_records.py  0006_vehicle_type.py  0007_maintenance_types_catalog.py  0008_bot_tables.py  0009_accident_attachment_enum_ext.py  0010_bot_invite_role.py  0011_bot_invite_phone.py  0012_bot_user_phone.py
db/shepherd_db/: logic.py  models.py  security.py
db/tests/: conftest.py  test_build_provisions.py  test_company_settings_schema.py  test_constraints.py  test_kpi_daily.py  test_logic.py  test_migrations.py  test_provisioning.py  test_roles.py  test_schema_tokens.py  test_seed.py  test_system_config.py  test_time_maintenance.py
deploy/: .env.example  .gitignore  README.md  config.example.toml  deploy.sh  docker-compose.prod.yml
libs/: pyproject.toml
libs/shepherd_config/: pyproject.toml
libs/shepherd_config/shepherd_config/: __init__.py  loader.py
libs/shepherd_config/tests/: test_example_config.py  test_loader.py
libs/shepherd_contracts/: __init__.py  auth.py  documents.py  ingestion.py  providers.py
libs/tests/: test_auth.py  test_documents.py  test_ingestion.py  test_providers.py
services/channel-gateway/: Dockerfile  pyproject.toml
services/channel-gateway/app/: identity.py  ingest.py  main.py  registry.py  schemas.py
services/channel-gateway/app/providers/: telegram.py  webapp.py  whatsapp.py
services/channel-gateway/tests/: conftest.py  test_conformance.py  test_identity.py  test_ingest.py  test_outbound.py  test_telegram.py  test_webapp.py  test_whatsapp.py
services/doc-extractor/: Dockerfile  README.md  pyproject.toml
services/doc-extractor/app/: base.py  bedrock.py  gemini.py  prompt.py  reconcile.py  service.py
services/doc-extractor/eval/: prompt_log.md  run.py
services/doc-extractor/eval/fixtures/: blurry_insurance.json  clean_insurance.json  clean_license.json  clean_ticket.json  mismatch_plate.json  missing_fields_insurance.json  other_doc.json  partial_ticket.json  rotated_license.json  wrong_lang_ticket.json
services/doc-extractor/tests/: conftest.py  test_bedrock.py  test_eval.py  test_factory.py  test_gemini.py  test_reconcile.py  test_s3.py  test_schemas.py  test_service.py  test_smoke.py
services/fleet-api/: Dockerfile  pyproject.toml
services/fleet-api/app/: auth.py  deps.py  drive.py  main.py  repo.py  schemas.py  token.py
services/fleet-api/app/routers/: accidents.py  app_users.py  attendance.py  auth.py  bot.py  care.py  companies.py  config.py  customers.py  documents.py  drivers.py  events.py  files.py  km.py  kpi.py  maintenance_types.py  reports.py  sysadmin.py  vehicles.py
services/fleet-api/tests/: conftest.py  fakes.py  test_accidents.py  test_attendance.py  test_attendance_settings.py  test_auth.py  test_auth_tier.py  test_bot.py  test_care.py  test_company_settings.py  test_config_url.py  test_conftest_helper.py  test_crud.py  test_documents.py  test_enroll_cross_schema.py  test_files.py  test_health.py  test_km.py  test_kpi.py  test_kpi_per_schema.py  test_maintenance_time_per_schema.py  test_maintenance_types.py  test_reports_events_config.py  test_schema_routing.py  test_settings_read_schema.py  test_sysadmin.py  test_tenancy.py  test_token.py  test_vehicles.py
services/guardrails/: Dockerfile  PROMPT_LOG.md  pyproject.toml
services/guardrails/app/: base.py  deterministic.py  guardrails_ai.py  main.py
services/guardrails/tests/: test_t1_auth.py  test_t2_language.py  test_t3_provider.py  test_t4_input_rail.py  test_t5_output_rail.py  test_t6_fp_budget.py  test_t7_endpoints.py
services/image-analyser/: eval.py  infer.py  model.py  pyproject.toml  train.py
services/image-analyser/app/: main.py
services/image-analyser/data/: augment.py  dataset.py  generate.py
services/image-analyser/tests/: test_app.py  test_augment.py  test_dataset.py  test_eval.py  test_generate.py  test_infer.py  test_model.py  test_train.py
services/langgraph-agent/: Dockerfile  pyproject.toml
services/langgraph-agent/app/: graph.py  main.py  prompts.py  tools.py
services/langgraph-agent/eval/: prompt_log.md  run.py
services/langgraph-agent/tests/: conftest.py  test_graph.py  test_live.py  test_main.py  test_prompts.py  test_tools.py
services/ollama-assistant/: Dockerfile  pyproject.toml
services/ollama-assistant/app/: assistant.py  main.py
services/ollama-assistant/tests/: test_t1_client.py  test_t2_db_blind.py  test_t3_eval.py  test_t4_live.py
services/rag/: .coverage.Mac.pid37781.X03xrxYx.HNQIp837rWOh  Dockerfile  README.md  pyproject.toml
services/rag/app/: embed.py  generate.py  main.py  profile.py  retrieve.py  sync.py
services/rag/eval/: prompt_log.md  run.py
services/rag/tests/: conftest.py  test_embed.py  test_generate.py  test_main.py  test_profile.py  test_retrieve.py  test_sync.py
services/telegram-bot/: Dockerfile  README.md  pyproject.toml
services/telegram-bot/app/: commands.py  config.py  context.py  fleet.py  fmt.py  keyboards.py  main.py  router.py  s3.py  sessions.py  storage.py  stt.py  texts.py  tg.py  validate.py  vision.py
services/telegram-bot/app/flows/: __init__.py  access.py  accident.py  attendance_admin.py  attendance_csv.py  broadcast.py  clock.py  doc_scan.py  fleet_summary.py  km_update.py  maintenance.py  my_vehicle.py  sysadmin.py  update_details.py  update_driver.py  vehicle_issue.py
services/telegram-bot/tests/: conftest.py  sim.py  test_config_source.py  test_e2e.py  test_flows.py  test_fmt.py  test_resilience.py
tests/e2e/: README.md  conftest.py  identities.py  pyproject.toml  test_integration.py
(+234 files in other folders)
