[tool.poetry]
name = "shepherd-db"
version = "0.1.0"
description = "Shepherd fleet DB schema, migrations, and seed"
authors = ["Shepherd Team <team@shepherd.local>"]
packages = [{ include = "shepherd_db" }]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0"
psycopg = {extras = ["binary"], version = "^3.1"}
shepherd-config = { path = "../libs/shepherd_config", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
testcontainers = {extras = ["postgres"], version = "^4.8"}
mypy = "^1.11"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
