[tool.poetry]
name = "shepherd-contracts"
version = "0.1.0"
description = "Shared contracts (pydantic models + provider interfaces) for Shepherd services"
authors = ["Shepherd Team <team@shepherd.local>"]
packages = [{ include = "shepherd_contracts" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
mypy = "^1.11"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = "shepherd_config/"

[tool.pytest.ini_options]
# Scope to this package's own tests; shepherd_config is a separate nested
# package with its own env and is tested from libs/shepherd_config.
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
