[tool.poetry]
name = "shepherd-config"
version = "0.1.0"
description = "Central config loader (config.toml + ${VAR} env interpolation) for Shepherd services"
authors = ["Shepherd Team <team@shepherd.local>"]
packages = [{ include = "shepherd_config" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
mypy = "^1.11"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
