[tool.poetry]
name = "channel-gateway"
version = "0.1.0"
description = "Multi-channel ingestion gateway (Telegram, Webapp; WhatsApp-ready)"
authors = ["Shepherd Team <team@shepherd.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
httpx = "^0.27"
python-multipart = "^0.0.12"
boto3 = "^1.35"
sqlalchemy = "^2.0"
psycopg = { extras = ["binary"], version = "^3.1" }
shepherd-contracts = { path = "../../libs", develop = true }
shepherd-db = { path = "../../db", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
pytest-asyncio = "^0.24"
respx = "^0.21"
moto = { extras = ["s3"], version = "^5.0" }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
