[tool.poetry]
name = "doc-extractor"
version = "0.1.0"
description = "Document extraction service - S3 doc -> typed fields via vision LLM"
authors = ["Shepherd Team <team@shepherd.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35"
google-genai = "^1.0"
httpx = "^0.27"
pydantic = "^2.0"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
shepherd-contracts = { path = "../../libs", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
moto = { extras = ["s3"], version = "^5.0" }
respx = "^0.21"
mypy = "^1.11"
boto3-stubs = { extras = ["bedrock-runtime", "s3"], version = "^1.35" }

[tool.pytest.ini_options]
markers = ["live: requires real AWS/GCP credentials"]

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
