[tool.poetry]
name = "fleet-api"
version = "0.1.0"
description = "Shepherd Fleet API service - sole Postgres writer, agent tool layer"
authors = ["Shepherd Team <team@shepherd.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
sqlalchemy = "^2.0"
psycopg = { extras = ["binary"], version = "^3.1" }
shepherd-contracts = { path = "../../libs", develop = true }
shepherd-db = { path = "../../db", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
httpx = "^0.27"
testcontainers = { extras = ["postgres"], version = "^4.8" }
mypy = "^1.11"

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
