[tool.poetry]
name = "guardrails"
version = "0.1.0"
description = "Shepherd Guardrails Service - deterministic + AI rails for input/output safety"
authors = ["Shepherd Team <team@shepherd.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
guardrails-ai = "^0.5"
langdetect = "^1.0"
sqlalchemy = "^2.0"
psycopg = { extras = ["binary"], version = "^3.1" }
shepherd-db = { path = "../../db", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
httpx = "^0.27"
pytest-mock = "^3.14"

[tool.pytest.ini_options]
markers = ["live: requires real API keys and running services"]

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
