[tool.poetry]
name = "image-analyser"
version = "0.1.0"
description = "Shepherd image-analyser service - CNN doc-type classifier"
authors = ["Shepherd Team <team@shepherd.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.0"
numpy = "^1.26"
torch = "^2.3"
torchvision = "^0.18"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
boto3 = "^1.34"
python-bidi = "^0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
httpx = "^0.27"
moto = { extras = ["s3"], version = "^5.0" }

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
