[tool.poetry]
name = "langgraph-agent"
version = "0.1.0"
description = "Shepherd LangGraph Agent - stateful conversational reasoning over Fleet API + RAG"
authors = ["Shepherd Team <team@shepherd.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
langgraph = "^0.2"
langchain = "^0.3"
langchain-anthropic = "^0.3"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
respx = "^0.21"

[tool.pytest.ini_options]
markers = ["live: requires ANTHROPIC_API_KEY and running Fleet API + RAG"]

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
