[tool.poetry]
name = "ollama-assistant"
version = "0.1.0"
description = "Shepherd Ollama General Assistant - DB-blind fleet helper via Llama 3"
authors = ["Shepherd Team <team@shepherd.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
httpx = "^0.27"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"

[tool.pytest.ini_options]
markers = ["live: requires a running local Ollama instance"]

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
