[tool.poetry]
name = "rag"
version = "0.1.0"
description = "Shepherd RAG service - semantic Q&A grounded in vehicle profiles"
authors = ["Shepherd Team <team@shepherd.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
sqlalchemy = "^2.0"
psycopg = { extras = ["binary"], version = "^3.1" }
chromadb = "^0.6"
sentence-transformers = "^3.0"
langchain = "^0.3"
langchain-anthropic = "^0.3"
shepherd-db = { path = "../../db", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
httpx = "^0.27"
numpy = "^1.26"

[tool.pytest.ini_options]
markers = ["live: requires real LLAMA_MODEL_PATH"]

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
