[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Shepherd invite-only Hebrew Telegram bot (aiogram, long-polling)"
authors = ["Shepherd Team <team@shepherd.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13"
httpx = "^0.27"
psycopg = { extras = ["binary"], version = "^3.1" }
psycopg-pool = "^3.2"
openai = "^1.50"
google-genai = "^1.0"
pydantic-settings = "^2.5"
shepherd-config = { path = "../../libs/shepherd_config", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
pytest-asyncio = "^0.24"
respx = "^0.21"
mypy = "^1.11"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
